2007-11-16  Glenn Morris  <rgm@gnu.org>

	* mail/mail-extr.el (mail-extr-all-top-level-domains): Update domains.

2007-11-16  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-lang.el (math-oper-table): Fix typo.
	Reduce precedence of "/" for TeX.

	* calc/calc-menu.el (calc-modes-menu): Add Languages submenu.

2007-11-16  Juri Linkov  <juri@jurta.org>

	* dired-aux.el (dired-read-shell-command-default): New function.
	(dired-read-shell-command): Use its return value for DEFAULT arg.

	* replace.el (keep-lines-read-args, occur-read-primary-args):
	Use a list of default values for DEFAULT arg of read-from-minibuffer.

	* man.el (Man-heading-regexp): Add 0-9.
	(Man-first-heading-regexp): Remove leading space [ \t]* before NAME.

2007-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-ghostscript-options): Remove resolution arg.
	(doc-view-resolution): New custom var.
	(doc-view-pdf/ps->png): Use it.
	(doc-view-shrink-factor): New var.
	(doc-view-enlarge, doc-view-shrink): New commands.
	(doc-view-mode-map): Use them.

2007-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* ediff-wind.el (ediff-window-setup-function):
	* simple.el (normal-erase-is-backspace):
	* eshell/em-unix.el (eshell/info):
	* progmodes/cc-engine.el (c-crosses-statement-barrier-p):
	Fix typos in docstrings.

	* emulation/cua-base.el (cua--keymaps-initialized):
	Rename from `cua--keymaps-initalized'.  Callers changed.
	(cua-highlight-region-shift-only): Doc fix.
	(cua-paste-pop): Fix typo in docstring.

2007-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emulation/cua-base.el (cua--pre-command-handler-1):
	Use input-decode-map instead of function-key-map.
	Use event-modifiers now that it works reliably.

	* vc.el (vc-diff-internal): Pop-to-buffer later.

	* subr.el (event-modifiers): Use internal-event-symbol-parse-modifiers.

	* pcvs.el (cvs-revert-if-needed): Ignore `unknown' files, since cvs
	did not touch them.
